# gdnative-stigmark

./: .gitignore  AUTHORS  Cargo.toml  ChangeLog  README.md  build-linux.sh  build-macosx.sh  build-windows.cmd  build.cmd
examples/console/: build-linux.sh  build-macosx.sh  build-windows.cmd  collection.cc  echo.cc  search.cc  waitgroup.hh
examples/godot/: main.gd  project.godot
examples/godot/libs/: stigmark.gdnlib  stigmark.gdns
examples/godot/scenes/: main.tscn
examples/stigmark-client/: collection.cc  login.cc  main.cc  waitgroup.hh
gdstigmark/: SConstruct
gdstigmark/src/: gdlibrary.cpp  init.cpp  login.cpp  search_async.cpp
include/: stigmark.h  win32.h
include/api/: collection.h  login.h  search.h
src/: lib.rs
src-stigmarkapp/: main.gd  project.godot
src-stigmarkapp/scenes/: main.tscn
src-stigmarkmod/: SConstruct  build-macos-m1.sh  build-win64.cmd
src-stigmarkmod/src/: gdlibrary.cpp  gdstigmark.h  gdstigmark.hpp  init.cpp  login.cpp  search.cpp  search_async.cpp  stigmark.cpp  stigmark.h
src/collections/: add_collection_impl.rs  mod.rs
src/get/: mod.rs  xget.rs-toremove
src/login/: login_impl.rs  mod.rs
src/search/: mod.rs  search.rs
