[package]
name = "stigmark-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.112"
hyper = { version="0.14.16", features = ["http1", "http2", "client", "runtime" ] }
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
hyper-tls = "0.5.0"
http = "0.2.6"
log = "0.4.14"
serde = { version="1.0.133", features = ["derive"] }
serde_json = "1.0.74"
urlencoding = "2.1.0"

[lib]
name = "libstigmark_client"
crate-type = [
    "dylib",        # .dll, .so, .dynlib
    "staticlib"     # .lib, .a
]
